# UR3eDTCourse

./: README.md  pyproject.toml
0_pre_requisites/: 0_environment_setup.ipynb  readme.md
communication/: protocol.py  readme.md
communication/installation/: test_server.py
examples/: 0_running_the_mockup.ipynb  1_sending_ctrl_messages.ipynb  2_receiving_state_messages.ipynb  4_kinematic_model_basics.ipynb
startup/: start_ur3e_mockup.py  startup.conf
startup/utils/: config.py
ur3e_mockup/: readme.md
