[tool.poetry]
name = "ur3edtcourse"
version = "0.1.0"
description = "This package contains the code for the UR3e Case Study for the 'Engineering Digital Twins' course at Aarhus University."
authors = ["Andreas Kaag Thomsen <akt@ece.au.dk>"]
readme = "README.md"
packages = [
    { include = "communication" },
    { include = "startup" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
roboticstoolbox-python = "1.1.1"
ansitable = "0.11.4"
anyio = "4.12.1"
appnope = "0.1.4"
argon2-cffi = "25.1.0"
argon2-cffi-bindings = "25.1.0"
arrow = "1.4.0"
asttokens = "3.0.1"
async-lru = "2.0.5"
attrs = "25.4.0"
babel = "2.17.0"
backcall = "0.2.0"
backports-tarfile = "1.2.0"
beautifulsoup4 = "4.14.3"
bleach = "6.3.0"
build = "1.4.0"
cachecontrol = "0.14.4"
certifi = "2026.1.4"
cffi = "2.0.0"
cfgv = "3.5.0"
charset-normalizer = "3.4.4"
cleo = "2.1.0"
colored = "2.3.1"
comm = "0.2.3"
contourpy = "1.3.2"
coverage = "7.13.1"
crashtest = "0.4.1"
cycler = "0.12.1"
debugpy = "1.8.19"
decorator = "5.2.1"
defusedxml = "0.7.1"
distlib = "0.4.0"
docker = "7.1.0"
docopt = "0.6.2"
dulwich = "0.24.10"
executing = "2.2.1"
fastjsonschema = "2.21.2"
filelock = "3.20.3"
findpython = "0.7.1"
fonttools = "4.61.1"
fqdn = "1.5.1"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
identify = "2.6.15"
idna = "3.11"
importlib-metadata = "8.7.1"
iniconfig = "2.3.0"
installer = "0.7.0"
ipykernel = "7.1.0"
ipympl = "0.9.8"
ipython = "8.12.3"
ipywidgets = "8.1.8"
isoduration = "20.11.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.2"
jaraco-functools = "4.4.0"
jedi = "0.19.2"
jinja2 = "3.1.6"
json5 = "0.13.0"
jsonpointer = "3.0.0"
jsonschema = "4.26.0"
jsonschema-specifications = "2025.9.1"
jupyter = "1.1.1"
jupyter-console = "6.6.3"
jupyter-events = "0.12.0"
jupyter-lsp = "2.3.0"
jupyter-client = "8.8.0"
jupyter-core = "5.9.1"
jupyter-server = "2.17.0"
jupyter-server-terminals = "0.5.3"
jupyterlab = "4.5.1"
jupyterlab-pygments = "0.3.0"
jupyterlab-server = "2.28.0"
jupyterlab-widgets = "3.0.16"
keyring = "25.7.0"
kiwisolver = "1.4.9"
lark = "1.3.1"
markupsafe = "3.0.3"
matplotlib = "3.10.8"
matplotlib-inline = "0.2.1"
mistune = "3.2.0"
more-itertools = "10.8.0"
msgpack = "1.1.2"
nbclient = "0.10.4"
nbconvert = "7.16.6"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
nodeenv = "1.10.0"
notebook = "7.5.1"
notebook-shim = "0.2.4"
numpy = "<2.0"
overrides = "7.7.0"
packaging = "25.0"
pandocfilters = "1.5.1"
parso = "0.8.5"
pbs-installer = "2025.12.17"
pexpect = "4.9.0"
pgraph-python = "0.6.3"
pickleshare = "0.7.5"
pika = "1.3.2"
pillow = "12.1.0"
pipreqs = "0.5.0"
pkginfo = "1.12.1.2"
platformdirs = "4.5.1"
pluggy = "1.6.0"
poetry = "2.2.1"
poetry-core = "2.2.1"
pre-commit = "4.5.1"
progress = "1.6.1"
prometheus-client = "0.23.1"
prompt-toolkit = "3.0.52"
psutil = "7.2.1"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pycparser = "2.23"
pygments = "2.19.2"
pyhocon = "0.3.61"
pyparsing = "3.3.1"
pyproject-hooks = "1.2.0"
pytest = "7.4.4"
pytest-cov = "4.1.0"
python-dateutil = "2.9.0.post0"
python-json-logger = "4.0.0"
pyyaml = "6.0.3"
pyzmq = "27.1.0"
rapidfuzz = "3.14.3"
referencing = "0.37.0"
requests = "2.32.5"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rfc3987-syntax = "1.1.0"
rpds-py = "0.30.0"
rtb-data = "1.0.1"
scipy = "1.15.3"
send2trash = "2.0.0"
shellingham = "1.5.4"
six = "1.17.0"
soupsieve = "2.8.1"
spatialgeometry = "1.1.0"
spatialmath-python = "1.1.15"
stack-data = "0.6.3"
swift-sim = "1.1.0"
terminado = "0.18.1"
tinycss2 = "1.4.0"
tomlkit = "0.13.3"
tornado = "6.5.4"
traitlets = "5.14.3"
trove-classifiers = "2025.12.1.14"
typing-extensions = "4.15.0"
tzdata = "2025.3"
uri-template = "1.3.0"
urllib3 = "2.6.3"
virtualenv = "20.36.1"
wcwidth = "0.2.14"
webcolors = "25.10.0"
webencodings = "0.5.1"
websocket-client = "1.9.0"
websockets = "<11.0"
widgetsnbextension = "4.0.15"
xattr = "1.3.0"
yarg = "0.1.9"
zipp = "3.23.0"
zmq = "0.0.0"
zstandard = "0.25.0"
pandas = "^2.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
